debug authentication issues & add more swagger documentation
